infrastructure/semaphore-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
spec:
  type: ClusterIP
  selector:
    app: semaphore
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
